Added reason to suggestions
